--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "sockets-node",
   "version": "1.0.0",
-  "description": "",
+  "description": "Uso se Socket.io en un chat en tiempo real",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "CarlosAlmanza",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
